--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.5.3",
     "express": "^4.10.2",
     "nodemon": "^1.3.7",
     "socket.io": "^1.3.4"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/rachitGulati/chat"
+  },
+  "bugs": {
+    "url": "https://github.com/rachitGulati/chat/issues"
+  },
+  "homepage": "https://github.com/rachitGulati/chat"
 }
