--- a/client/bower.json
+++ b/client/bower.json
@@ -18,6 +18,7 @@
     "ngDialog": "~0.3.11",
     "requirejs-domready": "~2.0.1",
     "angular-scroll-glue": "~2.0.4",
-    "ng-emoticons": "~1.1.0"
+    "ng-emoticons": "~1.1.0",
+    "angular-animate": "~1.3.15"
   }
 }
