--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.12.2",
     "cors": "^2.5.3",
     "express": "^4.10.2",
-    "nodemon": "^1.3.7",
+    "nodemailer": "0.7.1",
+    "nodemon": "1.3.7",
+    "randomstring": "^1.0.3",
     "socket.io": "^1.3.4"
   },
   "devDependencies": {},
